# japanese-reading-stats

./: .gitignore  README.md  books_reading_report.html  index.html  pyproject.toml
scripts/: __init__.py  visualize_books.py
tests/: __init__.py  test_visualize_books.py
